<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlipIt!</string>
    <string name="blip_title">Welcome to BlipIt !!!</string>
    <string name="blip_snippet">You are here</string>
    <string name="blip_notification_service_started">Blip Notifications enabled</string>
    <string name="blip_notification_service_stopped">Blip Notifications disabled</string>
    <string name="blip_notification_received">Blip Notification received</string>
    <string name="user_location_updated">User Location Updated</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_selected">Settings coming soon</string>
    <string name="title_radius_preference">Enter radius</string>
    <string name="summary_radius_preference">Maximum distance in KM from your current position within which blips should be displayed</string>
    <string name="default_value_radius_preference">2</string>
    <string name="dialog_title_radius_preference">Preferred radius in KM</string>
    <string name="title_channel_preference">Enter channel preference</string>
    <string name="summary_channel_preference">Channel considered while displaying blips</string>
    <string name="dialog_title_channel_preference">Select the channel you are interested in</string>
    <string name="blipit_prefs">BlipIt Settings</string>
    <string name="radius_preference_success">Your radius preference has been saved.</string>
    <string name="radius_preference_failure">Radius cannot be greater than 10 KM. Reverting to default value of 2 KM.</string>
    <string name="reload_channels">Reload channels</string>
    <string name="title_show_panic_preference">Show panic blips</string>
    <string name="summary_show_panic_preference">Show blips from panic channels. These blips are shown only if the panic channels are selected.</string>
</resources>
